Task-4-Solution/kub_manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.service.expose: realestate.erkanbaran.me
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "80"
      nodePort: 30001
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: frontend
  type: NodePort
