Task-4-Solution/kub_manifest/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.service.expose: realestate.erkanbaran.me
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  rules:
    - host: realestate.erkanbaran.me
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
